@@ -12,6 +12,14 @@ New Java rule:
 	GuardLogStatement
 		- replace xpath implementation of GuardDebugLogging by GuardLogStatement (better perf)
 
+
+????? ??, 2013 - 5.0.3:
+
+Fixed bug 1064: Exception running PrematureDeclaration
+Fixed bug 1068: CPD fails on broken symbolic links
+
+
+
 February 3, 2013 - 5.0.2:
 
 Fixed bug  878: False positive: UnusedFormalParameter for abstract methods
